name:           hidb
version:        0.0.1
synopsis:       In-memory database (CS 240H Final Project)
build-type:     Simple
cabal-version:  >= 1.8
category:       System

-- STUDENTS: Make sure you add any no haskell source files you want included in
-- your submission here!
extra-source-files:
  README.md

library
  hs-source-dirs: src
  exposed-modules:
    Operation,
    DBTypes,
    DBUtils
  build-depends:
    base < 5
    ,stm > 2.4
    ,containers
    , QuickCheck > 2.7
    ,network
    ,random
    ,split -any
    ,bytestring
  default-language: Haskell2010
  ghc-options: -Wall

executable hidb
  main-is: Main.hs
  build-depends:
    base < 5
    , hidb
    , containers
    , stm > 2.4
  ghc-options: -Wall

test-suite test-operation
  type: exitcode-stdio-1.0
  main-is: TestOperation.hs
  build-depends:
    base < 5
    , hidb
    , containers
    , stm > 2.4
    , QuickCheck > 2.7
    , hspec
  ghc-options: -Wall
